# GlumBot

./: .gitignore  Glum.json  Makefile  README.md  ai.py  arch.puml  character.py  character_config.json  conversation.json  examle_session.json  example_config.ini  fbm.py  glum.py  main.py  memory_of_Glum.csv  memory_of_Glum.json  memory_of_Glum.msg  pyproject.toml  secret.py
characters/: Glum.json  Xavier.json
src/: _main.py  ai.py  bot_manager.py  character.py  config.py  conversation.py  fbm.py  log_formatter.py  main.py  memory_manager.py  messenger_client.py  tools.py
